fix: rename all routes
